<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.main.processes.EditProcessFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:minHeight="52dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/session_date"
        android:minHeight="52dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/process_description"
        android:minHeight="52dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_process_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textAutoCorrect"
            android:maxLines="6"
            android:breakStrategy="high_quality"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_edit_process"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="52dp"
        android:text="@string/save_process" />

</LinearLayout>